k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-app-deployment
  namespace: kiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employeeapp
  template:
    metadata:
      labels:
        app: employeeapp
    spec:
      containers:
        - name: employee-app-container
          image: kbogojoska02/kiii-project-ci:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
#              cpu: "500m"
            requests:
              memory: "256Mi"
          ports:
            - containerPort: 8080
