k8s/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiii-postgres-service
  namespace: kiii
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kiii-postgres
  namespace: kiii
spec:
  serviceName: kiii-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: kiii
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: kiii-postgres-pv
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: kiii-postgres-pv
          persistentVolumeClaim:
            claimName: kiii-postgres-pvc
