k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-app-service
  namespace: kiii
spec:
  selector:
    app: employeeapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
