k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-app-ingress
  namespace: kiii
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-app-service
                port:
                  number: 80
    - host: employeeapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-app-service
                port:
                  number: 80
